2003-07-13  Zoltan Varga  <vargaz@freemail.hu>

	* interp.c: Report unhandled exceptions correctly.

	* interp.c: Implement CEE_ISINST and CEE_CASTCLASS using 
	mono_object_isinst. Fixes bug #45539 and reflection-enum.exe.

Tue May 27 16:36:41 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c: don't use relative numbering stuff.

Tue May 27 12:18:44 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c: update for mono_class_vtable() changes.

Tue May 13 16:43:18 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c: handle thread static fields.

Sun Apr 27 13:27:59 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* interp.c: check for arraytypemismatch.

2003-04-23  Martin Baulig  <martin@ximian.com>

	* interp.c: When running with --dieonex, use the debugging code to
	print source lines in the backtrace.

2003-02-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* interp.c: added a dummy mono_runtime_install_handlers function to
	avoid crashing when ves_pinvoke_method tries to call it.

2003-02-06  Piers Haken	<piersh@friskit.com>

	* interp.c: warning cleanups

2002-11-15  Dick Porter  <dick@ximian.com>

	* interp.c: mono_runtime_init() now has an extra parameter for
	thread attaching.

2002-10-31  Dick Porter  <dick@ximian.com>

	* Makefile.am: The previous automake-1.6 fix broke automake-1.4 on
	cygwin.  Try again.

2002-09-27  Dick Porter  <dick@ximian.com>

	* interp.c: Tell glib what the program name is, by passing it the
	name of the managed file we're executing

2002-08-28  Dick Porter  <dick@ximian.com>

	* interp.c: mono_set_rootdir() doesnt take any args now

	* Makefile.am: Export HOST_CC and turn on optimisation for w32 builds

2002-08-28  Nick Drochak  <ndrochak@gol.com>

	* interp.c: check and throw exception if needed for overflow on 
	multiplication of integer types.

2002-08-07  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c (interp_walk_stack): removed the createdelegate icall

2002-08-02  Dietmar Maurer  <dietmar@ximian.com>
